Pixel perfect CSS on extension

--- a/firefox_ext/crowdbrowse simple/locale/en-US/overlay.dtd
+++ b/firefox_ext/crowdbrowse simple/locale/en-US/overlay.dtd
@@ -1,1 +1,4 @@
 <!ENTITY crowdbrowse "Hello World!">
+<!ENTITY title.label "Crowd Browse">
+<!ENTITY separate.label "This is a separate window!">
+<!ENTITY close.label "Close">
